fix: swipecell click error

--- a/src/swipe-cell/api.yaml
+++ b/src/swipe-cell/api.yaml
@@ -9,12 +9,12 @@
   attrs:
     - name: left-width
       title: 左侧滑动区域宽度
-      type: number | string
+      type: number
       default: auto
       description: 左侧滑动区域宽度
     - name: right-width
       title: 右侧滑动区域宽度
-      type: number | string
+      type: number
       default: auto
       description: 右侧滑动区域宽度
     - name: disabled
