--- a/src/fieldinput/api.yaml
+++ b/src/fieldinput/api.yaml
@@ -23,6 +23,25 @@
           title: 身份证
       default: text
       description: 输入框的类型
+      toggleupdate:
+        - value: text
+          updateData:
+            keytheme: native
+        - value: password
+          updateData:
+            keytheme: native
+        - value: integer
+          updateData:
+            keytheme: custom
+        - value: rndinteger
+          updateData:
+            keytheme: custom
+        - value: point
+          updateData:
+            keytheme: custom
+        - value: card
+          updateData:
+            keytheme: custom
     - name: value
       title: 值
       type: string
@@ -39,6 +58,14 @@
           title: 格子
       default: input
       description: 输入框样式
+      toggleupdate:
+        - value: input
+          updateData:
+            maxlength: 10000
+        - value: password
+          updateData:
+            clearable: false
+            maxlength: 6
     - name: clearable
       title: 清除按钮
       type: boolean
@@ -63,8 +90,12 @@
       description: 是否禁用
     - name: maxlength
       title: 输入最大长度
-      type: string
+      type: number
       description: 输入最大长度
+      display: number
+      default: 6
+      min: 1
+      max: 6
       dependency:
         - inputstyle: password
     - name: keyboard-title
@@ -83,11 +114,15 @@
       options:
         - value: native
           title: 默认键盘
+          dependency:
+            - type: text
+            - type: password
         - value: custom
           title: 定制键盘
       default: native
       description: 键盘样式
       dependency:
+        - type: password
         - type: integer
         - type: rndinteger
         - type: point
