fix: passwordinput add prop control 1

--- a/src/fieldinput/api.yaml
+++ b/src/fieldinput/api.yaml
@@ -66,6 +66,7 @@
           updateData:
             clearable: false
             maxlength: 6
+            keytheme: custom
     - name: clearable
       title: 清除按钮
       type: boolean
@@ -116,7 +117,9 @@
           title: 默认键盘
           dependency:
             - type: text
+              inputstyle: input
             - type: password
+              inputstyle: input
         - value: custom
           title: 定制键盘
       default: native
