:construction_worker: support check cmd

--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
   },
   "scripts": {
     "bootstrap": "yarn || npm i",
+    "check": "node bin/ggpull && node bin/check-deps",
     "dev:vusion": "cross-env scene=desktop vue-cli-service doc --port 9100",
     "dev": "cross-env scene=desktop vant-cli dev",
     "dev2": "vant-cli dev",
     "lint": "vant-cli lint",
     "test": "vant-cli test",
-    "build:vusion": "vue-cli-service library-build --dest dist-theme",
+    "build:vusion": "npm run check && vue-cli-service library-build --dest dist-theme",
     "build2": "vant-cli build",
     "build": "cross-env scene=desktop vant-cli build",
     "release": "vant-cli release",
