fix: passwordinput add prop control 2

--- a/src/fieldinput/api.yaml
+++ b/src/fieldinput/api.yaml
@@ -122,6 +122,15 @@
               inputstyle: input
         - value: custom
           title: 定制键盘
+          dependency:
+            - type: integer
+            - type: rndinteger
+            - type: point
+            - type: card
+            - type: password
+              readonly: true
+            - type: password
+              disabled: true
       default: native
       description: 键盘样式
       dependency:
