--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "eslint": "^8.31.0",
     "husky": "^8.0.1",
     "nano-staged": "^0.8.0",
-    "prettier": "^2.7.1",
-    "rimraf": "^3.0.2"
+    "prettier": "^2.7.1"
   }
 }
