--- a/packages/create-vant-cli-app/package.json
+++ b/packages/create-vant-cli-app/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
     "release-it": "^15.4.1",
+    "rimraf": "^4.0.4",
     "typescript": "^4.8.2"
   },
   "dependencies": {
