--- a/packages/vant-area-data/package.json
+++ b/packages/vant-area-data/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "esbuild": "^0.16.10",
     "release-it": "^15.4.1",
+    "rimraf": "^4.0.4",
     "typescript": "^4.8.2"
   },
   "release-it": {
