--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -44,6 +44,7 @@
     "@types/less": "^3.0.3",
     "@types/lodash": "^4.14.191",
     "@types/markdown-it": "^12.2.3",
+    "rimraf": "^4.0.4",
     "vue": "^3.2.45"
   },
   "dependencies": {
