--- a/packages/vant-popperjs/package.json
+++ b/packages/vant-popperjs/package.json
@@ -40,6 +40,7 @@
     "@popperjs/core": "^2.11.6",
     "esbuild": "^0.16.10",
     "release-it": "^15.4.1",
+    "rimraf": "^4.0.4",
     "typescript": "^4.8.2"
   },
   "release-it": {
