--- a/packages/vant-use/package.json
+++ b/packages/vant-use/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "esbuild": "^0.16.10",
     "release-it": "^15.4.1",
+    "rimraf": "^4.0.4",
     "typescript": "^4.8.2",
     "vue": "^3.2.45"
   },
