feat: list-view desc better

--- a/src-vusion/components/list-view/api.yaml
+++ b/src-vusion/components/list-view/api.yaml
@@ -157,7 +157,7 @@
       title: 是否隐藏空态文案
       type: boolean
       default: false
-      description: 是否隐藏空态文案
+      description: 是否隐藏表格末尾“没有更多了”文案
     - name: placeholder
       title: 筛选输入框的占位符
       type: string
