feat:增加 copyimg 命令

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dev2": "vant-cli dev",
     "lint": "vant-cli lint",
     "test": "vant-cli test",
-    "build:vusion": "npm run check && vue-cli-service library-build --dest dist-theme",
+    "copyimg": "node bin/copy-lcp-images ",
+    "build:vusion": "npm run check && vue-cli-service library-build --dest dist-theme && npm run copyimg",
     "build2": "vant-cli build",
     "build": "cross-env scene=desktop vant-cli build",
     "release": "vant-cli release",
