--- a/src-vusion/components/grid-view/api.yaml
+++ b/src-vusion/components/grid-view/api.yaml
@@ -207,7 +207,7 @@
       support:
         - name: van-cardu
           title: 卡片
-          snippet: '<template #item="scope"><van-cardu><template #head><van-text text="标题"></van-text></template><van-text  text="卡片内容"></van-text></van-cardu></template>'
+          snippet: '<template #item="current"><van-cardu><template #head><van-text text="标题"></van-text></template><van-text  text="卡片内容"></van-text></van-cardu></template>'
     - concept: Slot
       name: item
       description: 自定义选项的结构和样式
