--- a/src-vusion/components/list-view/api.yaml
+++ b/src-vusion/components/list-view/api.yaml
@@ -207,7 +207,7 @@
       support:
         - name: van-cell
           title: 单元格
-          snippet: '<template #item="scope"><van-cell isLink><template #title>文本</template></van-cell></template>'
+          snippet: '<template #item="current"><van-cell isLink><template #title>文本</template></van-cell></template>'
     - concept: Slot
       name: item
       description: 自定义选项的结构和样式
