--- a/src-vusion/components/link/api.yaml
+++ b/src-vusion/components/link/api.yaml
@@ -33,11 +33,9 @@
       options:
         - value: destination
           title: 页面跳转
-        - value: href
-          title: 普通链接
         - value: download
           title: 下载链接
-      default: href
+      default: destination
       description: ""
       compType: linkTypeSelect
     - name: hrefAndTo
