--- a/src/cardu/api.yaml
+++ b/src/cardu/api.yaml
@@ -82,7 +82,7 @@
           title: 顶级窗口
           advanced: true
       default: _self
-      description: 链接打开方式
+      description: 父级窗口和顶级窗口仅适用于iframe组件嵌套的情况，若不存在嵌套，则打开方式同当前窗口。
       group: 主要属性
   events:
     - name: click
