--- a/src/dropdown-menu/api.yaml
+++ b/src/dropdown-menu/api.yaml
@@ -179,7 +179,7 @@
           title: 顶级窗口
           advanced: true
       default: _self
-      description: 链接打开方式
+      description: 父级窗口和顶级窗口仅适用于iframe组件嵌套的情况，若不存在嵌套，则打开方式同当前窗口。
   slots:
     - concept: Slot
       name: default
