--- a/src/notice-bar/api.yaml
+++ b/src/notice-bar/api.yaml
@@ -62,7 +62,7 @@
           title: 顶级窗口
           advanced: true
       default: _self
-      description: 链接打开方式
+      description: 父级窗口和顶级窗口仅适用于iframe组件嵌套的情况，若不存在嵌套，则打开方式同当前窗口。
   events:
     - name: click
       title: 点击通知栏时触发
