--- a/packages/vant-use/package.json
+++ b/packages/vant-use/package.json
@@ -43,6 +43,9 @@
     "typescript": "^4.8.2",
     "vue": "^3.2.45"
   },
+  "peerDependencies": {
+    "vue": "^3.0.0"
+  },
   "release-it": {
     "git": {
       "tag": false,
