--- a/packages/vant/package.json
+++ b/packages/vant/package.json
@@ -20,6 +20,7 @@
     "build:site": "vant-cli build-site",
     "release": "cp ../../README.md ./ && vant-cli release && rm ./README.md",
     "release:site": "pnpm build:site && npx gh-pages -d site-dist --add",
+    "test:update": "vant-cli test --updateSnapshot",
     "test:watch": "vant-cli test --watch",
     "test:coverage": "open test/coverage/index.html"
   },
