--- a/src/image/api.yaml
+++ b/src/image/api.yaml
@@ -40,10 +40,10 @@
       default: s
       description: 图片风格
     - name: preview
-      title: 图片预览
+      title: 点击放大
       type: boolean
       default: true
-      description: 是否支持点击全屏放大预览
+      description: 是否支持点击放大全屏展示
   slots: false
   events:
     - name: click
