--- a/src-vusion/components/list-view/api.yaml
+++ b/src-vusion/components/list-view/api.yaml
@@ -202,7 +202,7 @@
   slots:
     - concept: Slot
       name: default
-      description: 插入<van-cell>
+      description: 插入<van-cell />
       empty-background: drag-entity-here
       support:
         - name: van-cell
