docs(Field): consistent with demo

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "lint": "pnpm --dir ./packages/vant lint",
     "test": "pnpm --dir ./packages/vant test",
     "test:watch": "pnpm --dir ./packages/vant test:watch",
+    "test:update": "pnpm --dir ./packages/vant test:update",
     "build": "pnpm --dir ./packages/vant build",
     "build:site": "pnpm --dir ./packages/vant build:site"
   },
