--- a/.github/workflows/deploy-v4-site.yml
+++ b/.github/workflows/deploy-v4-site.yml
@@ -18,7 +18,7 @@ jobs:
           ref: 'main'
 
       - name: Install pnpm
-        run: npm i pnpm@7 -g
+        run: corepack enable
 
       - uses: actions/setup-node@v2
         with:
