fix: 多选组转换器默认值

--- a/src/checkbox-group/api.yaml
+++ b/src/checkbox-group/api.yaml
@@ -57,9 +57,9 @@
           title: 以';'连接
         - value: json
           title: json
-        - value: ""
+        - value: none
           title: 无
-      default: ""
+      default: none
       description: 将选中的值以选择的符号作为连接符，转为字符串格式；选择“json”则转为JSON字符串格式
       bindHide: true
   slots:
