feat: 时间选择器支持自定义展示格式

--- a/src/datetime-picker/api.yaml
+++ b/src/datetime-picker/api.yaml
@@ -24,6 +24,7 @@
     - name: converter
       title: 转换器
       type: string
+      description: 转换绑定的值类型
       options:
         - title: yyyy/MM/dd HH:mm:ss
           value: format
@@ -40,6 +41,8 @@
           value: datetime
         - name: type
           value: date
+        - name: type
+          value: year-month
     - name: value
       title: 值
       type: string,number,Date
@@ -75,6 +78,10 @@
       type: string, number
       default: 0
       description: 当时间选择器类型为 time 时
+    - name: displayFormat
+      title: 自定义展示格式
+      type: string
+      description: 只用于页面上展示的格式，例如：yyyy年MM月dd日
     - name: title
       type: string
       default: ""
