feat: 时间选择器支持打开、关闭调用

--- a/src/datetime-picker/api.yaml
+++ b/src/datetime-picker/api.yaml
@@ -120,3 +120,8 @@
       description: 点击完成按钮时触发的事件
       params: []
   description: 时间选择器，支持日期、年月、时分等维度
+  methods:
+    - name: open
+      description: 打开
+    - name: close
+      description: 关闭
