:bug: unified image url

--- a/src/gallery/api.yaml
+++ b/src/gallery/api.yaml
@@ -8,7 +8,7 @@
   - name: data-source
     title: 数据源
     type: Array<Item> | Function | object
-    value: 'https://static-vusion.nos-eastchina1.126.net/h5-template/cat.jpeg'
+    value: 'https://static-vusion.163yun.com/h5-template/cat.jpeg'
     description: 数据源
   slots: false
   events:
