--- a/.github/workflows/deploy-v2-site.yml
+++ b/.github/workflows/deploy-v2-site.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: '2.x'
+          node-version: '14.x'
 
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
