--- a/.github/workflows/deploy-v2-site.yml
+++ b/.github/workflows/deploy-v2-site.yml
@@ -16,6 +16,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: '2.x'
+
+      - name: Set Node Version
+        uses: actions/setup-node@v1
+        with:
           node-version: '14.x'
 
       - name: Install dependencies
