feat 组件优化-隐藏与slot互斥的属性配置

--- a/src/area/api.yaml
+++ b/src/area/api.yaml
@@ -16,6 +16,7 @@
       title: 左侧标题
       type: string
       description: 左侧标题
+      advanced: true
     - name: areaListprop
       title: 数据源(默认全部)
       type: array
