--- a/src/datetime-picker/api.yaml
+++ b/src/datetime-picker/api.yaml
@@ -8,6 +8,7 @@
       title: 左侧标题
       type: string
       description: 左侧文本插槽内容存在时优先展示插槽内容
+      advanced: true
     - name: type
       title: 时间类型
       type: string
