--- a/src/cascader/api.yaml
+++ b/src/cascader/api.yaml
@@ -16,6 +16,7 @@
       title: 左侧标题
       type: string
       description: 左侧标题
+      advanced: true
     - name: data-source
       title: 数据源
       type: array
