--- a/src/pickerson/api.yaml
+++ b/src/pickerson/api.yaml
@@ -16,6 +16,7 @@
       title: 左侧标题
       type: string
       description: 左侧标题
+      advanced: true
     - name: columnsprop
       title: 数据源(一维数组)
       type: array
